--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!doctype html>
 <html>
-<head>
-<title>Our Funky HTML Page</title>
-<meta name="description" content="Our first page">
-<meta name="keywords" content="html tutorial template">
-</head>
-<body>
-testing testing testing
-</body>
+    <head>
+        <title>Our Funky HTML Page</title>
+        <meta name="description" content="Our first page">
+        <meta name="keywords" content="html tutorial template">
+    </head>
+    <body>
+        testing testing testing
+        hello
+    </body>
 </html>
